# ai-projects

./: README.md  pyproject.toml  setup.md
gen-ai/: README.md  gen-ai.md  google-ai.py  open-ai.py  resturent_all_reviews.py
gen-ai/benchmarks/: README.md
gen-ai/evaluation-metrics/: README.md
gen-ai/fine-tuning/: README.md
gen-ai/generative-config/: README.md
gen-ai/model/: README.md
gen-ai/model/architecture/: README.md
gen-ai/model/compute/: README.md
gen-ai/model/model-hub/: README.md
gen-ai/pretraining/: README.md
gen-ai/project-lifecycle/: README.md
gen-ai/project-lifecycle-and-roles/: README.md
gen-ai/projects/: README.md
gen-ai/projects/summarize_dialog/: Lab_1_summarize_dialogue.ipynb  READMD.md  few_shot_inference.py  generative_config_params.py  load_dataset.py  one_shot_inference.py  tokenizer.py  verify_instance.py  zero_shot_inference_1.py  zero_shot_inference_2.py
gen-ai/prompt/: README.md
gen-ai/rag/: README.md
gen-ai/team/: team.md
