[project]
name = "ai-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==2.17.0",
    "evaluate==0.4.0",
    "google-genai>=2.3.0",
    "huggingface-hub>=0.36.2",
    "openai>=2.37.0",
    "pandas>=2.0,<3",
    "peft==0.3.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "rouge-score==0.1.2",
    "torch==2.5.1",
    "torchdata==0.10.0",
    "transformers==4.38.2",
    "truststore>=0.10.4",
]
